--- a/index.html
+++ b/index.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Coffee Masters</title>
 </head>
-<body>
 
+<body>
+  <div class="grid-container">
+    <nav>
+      <img class="logo" src="https://btholt.github.io/complete-intro-to-web-dev-v3/images/coffee_masters_logo.png">
+      <h1 class="brand-name">Coffee Masters</h1>
+    </nav>
+    <main>
+      <section class="checkout">
+        <article class="checkout-info">
+          <h2 class="card-header">ITEMS</h2>
+          <ul class="checkout-items">
+            <li>
+              <p class="item-name"><span class="quantity">1x</span>Cappuccino<span class="item-price">$3.35</span></p>
+              <p class="item-customization">Light foam</p>
+            </li>
+            <li>
+              <p class="item-name"><span class="quantity">1x</span>Cappuccino<span class="item-price">$3.85</span></p>
+              <p class="item-customization">Light foam</p>
+              <p class="item-customization">Double Espresso</p>
+            </li>
+            <li>
+              <p class="item-name"><span class="quantity">1x</span>Croissant<span class="item-price">$2.45</span></p>
+              <p class="item-customization">Butter</p>
+            </li>
+          </ul>
+        </article>
+
+        <article class="customer-info">
+          <div class="customer-name">
+            <h2 class="card-header">NAME</h2>
+            <label for="name" class="input-label">Name for Order</label>
+            <input type="text" id="name" class="name-input" placeholder="e.g Ford Prefect">
+          </div>
+
+          <div class="payment-info">
+            <h2 class="card-header">PAYMENT</h2>
+            <label for="card-number">Card Number</label>
+            <input type="text" id="card-number" class="card-number-input">
+            <label for="card-number">CCV Number</label>
+            <input type="text" id="ccv-number" class="ccv-input">
+          </div>
+        </article>
+      </section>
+
+      <section class="checkout-total-info">
+        <p>Subtotal:<span class="subtotal-price">$9.65</span></p>
+        <p>Tax:<span class="subtotal-price">$0.82</span></p>
+        <p>Total:<span class="subtotal-price">$9.65</span></p>
+        <button class="order-btn">Place Order</button>
+      </section>
+    </main>
+  </div>
 </body>
+
 </html>
