Add style to navbar

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
   <title>Coffee Masters</title>
 </head>
 
 <body>
   <div class="grid-container">
-    <nav>
+    <nav class="nav-bar">
       <img class="logo" src="https://btholt.github.io/complete-intro-to-web-dev-v3/images/coffee_masters_logo.png">
       <h1 class="brand-name">Coffee Masters</h1>
     </nav>
