Add style to the items card

--- a/index.html
+++ b/index.html
@@ -21,16 +21,29 @@
           <h2 class="card-header">ITEMS</h2>
           <ul class="checkout-items">
             <li>
-              <p class="item-name"><span class="quantity">1x</span>Cappuccino<span class="item-price">$3.35</span></p>
+              <div class="item">
+                <p class="item-name"><span class="quantity">1x</span>Cappuccino</p>
+                <span class="item-price">$3.35</span>
+              </div>
+              <div class="item-customization-container">
               <p class="item-customization">Light foam</p>
+              </div>
             </li>
             <li>
-              <p class="item-name"><span class="quantity">1x</span>Cappuccino<span class="item-price">$3.85</span></p>
-              <p class="item-customization">Light foam</p>
-              <p class="item-customization">Double Espresso</p>
+              <div class="item">
+                <p class="item-name"><span class="quantity">1x</span>Cappuccino</p>
+                <span class="item-price">$3.85</span>
+              </div>
+              <div class="item-customization-container">
+                <p class="item-customization">Light foam</p>
+                <p class="item-customization">Double Espresso</p>
+              </div>
             </li>
             <li>
-              <p class="item-name"><span class="quantity">1x</span>Croissant<span class="item-price">$2.45</span></p>
+              <div class="item">
+                <p class="item-name"><span class="quantity">1x</span>Croissant</p>
+                <span class="item-price">$2.45</span>
+              </div>
               <p class="item-customization">Butter</p>
             </li>
           </ul>
