Add total section style

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <span class="item-price">$3.35</span>
               </div>
               <div class="item-customization-container">
-              <p class="item-customization">Light foam</p>
+                <p class="item-customization">Light foam</p>
               </div>
             </li>
             <li>
@@ -73,9 +73,11 @@
       </section>
 
       <section class="checkout-total-info">
-        <p>Subtotal:<span class="subtotal-price">$9.65</span></p>
-        <p>Tax:<span class="subtotal-price">$0.82</span></p>
-        <p>Total:<span class="subtotal-price">$9.65</span></p>
+        <div class="label-divider">
+          <p class="subtotal-label">Subtotal:<span class="subtotal-price">$9.65</span></p>
+          <p class="tax-label">Tax:<span class="subtotal-price">$0.82</span></p>
+        </div>
+        <p class="total-label">Total:<span class="subtotal-price">$9.65</span></p>
         <button class="order-btn">Place Order</button>
       </section>
     </main>
